i have made some changes in terms_and_conditions.html

--- a/myecommerce/templates/terms_and_conditions.html
+++ b/myecommerce/templates/terms_and_conditions.html
@@ -20,7 +20,7 @@
     </ul>
 </head>
 <body>
-    <h1>Terms and Conditions</h1>
+    <h1>Terms and Conditions Apply!</h1>
     <p>{{ terms.content }}</p>
 </body>
 </html>
