i have added css styles to the terms and conditions

--- a/myecommerce/templates/terms_and_conditions.html
+++ b/myecommerce/templates/terms_and_conditions.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Terms and Conditions</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <p>Here are the terms and conditions for using our website:</p>
     <ul>
         <li>Acceptance of Terms: Users agree to abide by the terms and conditions outlined by the ecommerce website.</li>
