--- a/myecommerce/templates/terms_and_conditions.html
+++ b/myecommerce/templates/terms_and_conditions.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    
-    
     <title>Terms and Conditions</title>
     
     
+</head>
+<body>
+    <div class="container">
+    <h1>Terms and Conditions Apply!</h1>
     <p>Here are the terms and conditions for using our website:</p>
     <ul>
         <li>Acceptance of Terms: Users agree to abide by the terms and conditions outlined by the ecommerce website.</li>
@@ -23,9 +25,7 @@
         <li>Limitation of Liability: The website is not liable for any damages or losses resulting from the use of its services or products, including but not limited to lost profits, data loss, or personal injury.</li>
         <li>Governing Law: Any disputes arising from the use of the website are subject to the laws of the jurisdiction where the website operates.</li>
     </ul>
-</head>
-<body>
-    <h1>Terms and Conditions Apply!</h1>
-    <p>{{ terms.content }}</p>
+    </div>
+    
 </body>
 </html>
