--- a/myecommerce/templates/terms_and_conditions.html
+++ b/myecommerce/templates/terms_and_conditions.html
@@ -39,20 +39,20 @@
 </head>
 <body>
     <div class="container">
-    <h1>Terms and Conditions Apply!</h1>
-    <p>Here are the terms and conditions for using our website:</p>
-    <ul>
-        <li><i class="fa-solid fa-handshake"></i>Acceptance of Terms: Users agree to abide by the terms and conditions outlined by the ecommerce website.</li>
-        <li><i class="fa-solid fa-face-smile"></i>User Accounts: Users may be required to create an account to make purchases. They are responsible for maintaining the security of their account credentials.</li>
-        <li><i class="fa-solid fa-parachute-box"></i>Product Listings and Prices: The ecommerce website provides accurate product descriptions and prices. It reserves the right to modify prices and product listings as necessary.</li>
-        <li><i class="fa-solid fa-hand-holding-dollar"></i>Ordering and Payment: Users agree to provide accurate billing and shipping information. Payment is processed securely, and users may be subject to additional fees such as taxes and shipping costs.</li>
-        <li><i class="fa-solid fa-basket-shopping"></i>Shipping and Delivery: The website outlines its shipping and delivery policies, including estimated delivery times and shipping fees. Users are responsible for tracking their orders and providing accurate shipping addresses.</li>
-        <li><i class="fa-solid fa-people-pulling"></i>Returns and Refunds: The website may offer a return policy allowing users to return products within a specified period for a refund or exchange. Users are responsible for any return shipping costs.</li>
-        <li><i class="fa-solid fa-fingerprint"></i>Privacy Policy: The website collects and uses personal information in accordance with its privacy policy. Users have the right to access, update, and delete their personal information.</li>
-        <li><i class="fa-solid fa-network-wired"></i>Intellectual Property: Users agree not to infringe upon the intellectual property rights of the website, including trademarks, copyrights, and patents.</li>
-        <li><i class="fa-solid fa-house-fire"></i>Limitation of Liability: The website is not liable for any damages or losses resulting from the use of its services or products, including but not limited to lost profits, data loss, or personal injury.</li>
-        <li><i class="fa-solid fa-building-ngo"></i>Governing Law: Any disputes arising from the use of the website are subject to the laws of the jurisdiction where the website <a href="#" class="back-to-top">operates.</a></li>
-    </ul>
+        <h1>Terms and Conditions Apply!</h1>
+        <p>Here are the terms and conditions for using our website:</p>
+        <ul>
+            <li><i class="fas fa-handshake"></i> Acceptance of Terms: Users agree to abide by the terms and conditions outlined by the ecommerce website.</li>
+            <li><i class="far fa-smile"></i> User Accounts: Users may be required to create an account to make purchases. They are responsible for maintaining the security of their account credentials.</li>
+            <li><i class="fas fa-box"></i> Product Listings and Prices: The ecommerce website provides accurate product descriptions and prices. It reserves the right to modify prices and product listings as necessary.</li>
+            <li><i class="fas fa-money-bill-wave"></i> Ordering and Payment: Users agree to provide accurate billing and shipping information. Payment is processed securely, and users may be subject to additional fees such as taxes and shipping costs.</li>
+            <li><i class="fas fa-shopping-basket"></i> Shipping and Delivery: The website outlines its shipping and delivery policies, including estimated delivery times and shipping fees. Users are responsible for tracking their orders and providing accurate shipping addresses.</li>
+            <li><i class="fas fa-undo"></i> Returns and Refunds: The website may offer a return policy allowing users to return products within a specified period for a refund or exchange. Users are responsible for any return shipping costs.</li>
+            <li><i class="fas fa-user-lock"></i> Privacy Policy: The website collects and uses personal information in accordance with its privacy policy. Users have the right to access, update, and delete their personal information.</li>
+            <li><i class="fas fa-shield-alt"></i> Intellectual Property: Users agree not to infringe upon the intellectual property rights of the website, including trademarks, copyrights, and patents.</li>
+            <li><i class="fas fa-exclamation-triangle"></i> Limitation of Liability: The website is not liable for any damages or losses resulting from the use of its services or products, including but not limited to lost profits, data loss, or personal injury.</li>
+            <li><i class="fas fa-gavel"></i> Governing Law: Any disputes arising from the use of the website are subject to the laws of the jurisdiction where the website operates.</li>
+        </ul>
     </div>
     <script>
         document.querySelector('.back-to-top').addEventListener('click', function(event) {
