--- a/myecommerce/templates/terms_and_conditions.html
+++ b/myecommerce/templates/terms_and_conditions.html
@@ -15,15 +15,15 @@
             background-color: #f8f9fa;
             margin: 0;
             padding: 0;
-            width: 80%;
+            width: 100%;
             height: 100%;
         }
         .container {
-            width: 80%;
+            width: 100%;
             height: 100%;
             margin: 0 auto;
             background-color: #e7edde;
-            padding: 20px;
+            padding: 0;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
