i have tried to correct errors in main.html

--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -113,7 +113,7 @@ const csrftoken = getToken('csrftoken');
                     <span><a href="{% url 'terms_and_conditions' %}">Terms and Conditions</a></span>
                     <span>Offers</span>
                     <span>Contact Us</span>
-                    <span><a href="abdulssekyanzi@gmail.com">Report a Bug</a></span>
+                    <span><a href="{% url 'bug_report' %}">Report a Bug</a></span>
                     
                 </div>
                 <div class="reachout">
