--- a/myonlineshop/myecommerce/templates/ecommerce/signup.html
+++ b/myonlineshop/myecommerce/templates/ecommerce/signup.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                    <div class="btn btn-warning" type="submit">Register</div>
+                  <button class="btn btn-warning" type="submit">Register</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{% url 'login'%}"
