--- a/myecommerce/templates/ecommerce/cart.html
+++ b/myecommerce/templates/ecommerce/cart.html
@@ -33,4 +33,5 @@
 		<div style="flex:1"><p>${{item.get_total}}</p></div>
 	</div>
     {% endfor %}
-{%endblock content %}
+</div>
+{% endblock content %}
