--- a/myecommerce/templates/ecommerce/store.html
+++ b/myecommerce/templates/ecommerce/store.html
@@ -5,19 +5,15 @@
     {%for product in products %}
     
 
-    <div class="col-lg-4">
-	    <img class="thumbnail" src="{{product.imageURL}}">
+    <div class="product">
+	    
 	    <div class="box-element product">
-		        <h6><strong>{{product.name}}</strong></h6>
-		        <hr>
-				<a data-product="{{product.id}}" data-action = "add" name="update-cart" class="btn btn-outline-success add-btn update-cart" href="#">Add to Cart</a>
-				
-		        
-		        <a class="btn btn-outline-success" href="#">View</a>
-		        
-				<h4 style="float: right;"><strong>${{product.price|floatformat}}</strong></h4>
-
-
+			<img class="thumb" src="{{product.imageURL}}">
+		    <h6><strong>{{product.name}}</strong></h6>
+		    <hr>
+			<a data-product="{{product.id}}" data-action = "add" name="update-cart" class="btn btn-outline-success add-btn update-cart" href="#">Add to Cart</a>	        
+		    <a class="btn btn-outline-success" href="#">View</a>    
+			<h4 style="float: right;"><strong>${{product.price|floatformat}}</strong></h4>
 	    </div>
     </div>
     {% endfor %}
