--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,6 +11,7 @@ h1,h2,h3,h4,h5,h6{
 	background-color: #fff;
 	border-radius: 4px;
 	padding: 10px;
+  margin-bottom: 20px;
 }
 
 .thumbnail{
@@ -27,7 +28,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .bg-dark{
-	background-color:blue!important;
+	background-color:rgb(0, 155, 90)!important;
 }
 
 #cart-icon{
@@ -100,8 +101,59 @@ h1,h2,h3,h4,h5,h6{
 	display: none!important;
 }
 
-
+.block-content {
+  margin: 0px 20px 0px 20px;
+}
   
+.profile {
+  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+  margin: 0px 5px 0px -5px;
+
+  padding: 0px;
+}
+
+.profile-button {
+  border-radius: 60px;
+  width: 55px;
+  margin-left: 10px;
+}
+
+.profile-name {
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.logout-profile-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  border-radius: 20px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 90px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  border-radius: 20px;
+  background-color: #f1f1f1;
+}
+.logout-profile-dropdown:hover .dropdown-content {
+  display: block;
+}
+
 .hero {
     display: grid;
     grid-template-columns: 1fr 250px;
@@ -112,7 +164,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .container {
-    padding: 150px 0px 100px 20px;
+    padding: 70px 0px 100px 20px;
 }
 
 .welcome {
@@ -128,6 +180,42 @@ h1,h2,h3,h4,h5,h6{
 .store-description {
     font-size: 30px;
 	color: black
+}
+
+.slideshow-container {
+  position: relative;
+  max-width: 500px;
+  margin: 0;
+  padding: 0;
+}
+
+.slide {
+  display: none;
+}
+
+.slide img {
+  width: 100%;
+}
+
+.fade {
+  animation: fade 10s infinite;
+}
+
+@keyframes fade {
+  0% {opacity: 0;}
+  25% {opacity: 1;}
+  75% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+.text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
 }
 
 .gradient-custom-3 {
@@ -164,76 +252,29 @@ section {
     border-radius: 5px;
 }
 
-.section-2 {
-    background-image: url(Transact.jpg);
-    object-fit: cover;
-    height: 500px;
-    margin: 20px;
-
-}
-
-.section-2-top {
-    text-align: center;
-}
-
-.section-2-bottom {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
-    margin-top: 50px;
-}
-
-.buy-button,
-.sell-button {
-    border: none;
-    border-radius: 15px;
-    background-color: #fff;
-    padding: 10px 20px 10px 20px;
-}
-
-.buy-button:hover,
-.sell-button:hover {
-    color: blue;
-    border: none;
-    border-radius: 15px;
-    background-color: #f7f7f7;
-    padding: 10px 20px 10px 20px;
-}
-
-.section-2-bottom p {
-    font-size: 20px;
-    color: #001368;
-    font-weight: bold;
-}
-
 #featured-products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
-    margin: 20px;
-}
-
-.section-3-1 {
-    text-align: center;
-}
-
-.shopping-venture {
-    width: 200px;
-    margin: 20px;
+    margin: 10px;
 }
 
 .product {
     text-align: center;
+    margin: 20px 10px 20px 10px;
+    border-radius: 10px;
 }
 
 .product img {
-    max-width: 100%;
-    height: auto;
+    max-width: 300px;
+    height: 300px;
     border-radius: 5px;
+    object-fit: contain;
+    ;
 }
 
 .product h3 {
-    margin-top: 10px;
+    margin-top: 10px 20px 10px 20px;
 }
 
 .product span {
@@ -254,6 +295,10 @@ section {
 
 .product button:hover {
     background-color: #6ade2c;
+}
+
+.btn-success {
+  padding-left: 20px;
 }
 
 section {
@@ -405,36 +450,17 @@ section {
     background-color: white;
   }
 
-
-
-footer {
-    background-color: white;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
+.container-t {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  background-color: #e7edde;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
-footer ul {
-    list-style: none;
-    margin-top: 10px;
-}
-
-footer ul li {
-    display: inline;
-    margin-right: 10px;
-}
-
-footer ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-footer ul li a:hover {
-    text-decoration: underline;
-}
-
-
-
+.
 
 * {
 	margin:0;
@@ -447,7 +473,7 @@ footer {
 	flex-direction: row;
 	font-family:"Poppins";
 	color:white;
-	background-color:blue;
+	background-color: rgb(0, 155, 90);
 	padding-top:50px;
 	padding-bottom:20px;
 	font-size:17px;
@@ -481,4 +507,30 @@ footer {
 }
 .register-btn {
   border-radius: 10px;
+}
+
+.copyright {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.copyright ul {
+  list-style: none;
+  margin-top: 10px;
+}
+
+.copyright ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+.copyright ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.copyright ul li a:hover {
+  text-decoration: underline;
 }
