--- a/static/css/main.css
+++ b/static/css/main.css
@@ -265,12 +265,11 @@ section {
     border-radius: 10px;
 }
 
-.product img {
-    max-width: 300px;
+.thumb {
+    width: 300px;
     height: 300px;
     border-radius: 5px;
     object-fit: contain;
-    ;
 }
 
 .product h3 {
@@ -460,7 +459,7 @@ section {
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-.
+
 
 * {
 	margin:0;
