--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -133,11 +133,7 @@
             </div>
         </footer>
         <div class="copyright">
-          <p>&copy; 2024 Ecom Store. All Rights Reserved.</p>
-          <ul>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Terms of Service</a></li>
-          </ul>
-      </div>
+          <p>&copy; 2024 Eduuka Store. All Rights Reserved.</p>
+        </div>
   </body>
 </html>
