--- a/static/css/main.css
+++ b/static/css/main.css
@@ -512,24 +512,6 @@ footer {
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 20px 0;
-}
-
-.copyright ul {
-  list-style: none;
-  margin-top: 10px;
-}
-
-.copyright ul li {
-  display: inline;
-  margin-right: 10px;
-}
-
-.copyright ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.copyright ul li a:hover {
-  text-decoration: underline;
+  padding-top: 10px;
+  padding-bottom: 1px;
 }
