changes to search, feedback,bug_report, home pages

--- a/myecommerce/templates/ecommerce/home.html
+++ b/myecommerce/templates/ecommerce/home.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <section class="hero">
+    
     <div class="container">
-       
         <h1 class="Store-name">SHOP AND SAVE</h1>
         <p class="welcome-note"><b>Discover a wide range of products and services at an affordable price.         
         </b></p>
-        <a href="{% url 'store'%}" class="btn">Shop Now</a>
+        <a href="{% url 'store'%}" class="shopnow">Shop Now</a>
 
-        <!-- <div class="slideshow-container">
+        <div class="slideshow-container">
             <div class="slide fade">
                 <img src="{% static 'images/sale.png' %}" alt="Slide 1">
                 
@@ -42,7 +42,7 @@
         </div>
         <script src="{% static 'js/Home-slideshow.js' %}"></script>
         
-    </div> -->
+    </div>
     
   </section>
   
