--- a/myecommerce/templates/bug_report.html
+++ b/myecommerce/templates/bug_report.html
@@ -1,17 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Report Bug</title>
-</head>
+{% extends 'ecommerce/main.html' %}
+{% load static %}
+{% block content %}
 <body>
-    <h1>Report Bug</h1>
-    <a href="{% url 'bug_report' %}">Report a Bug</a>
+    <style>
+        a {
+    display: block;
+    text-align: center;
+    color: #007bff; /* Set link color */
+    text-decoration: none;
+    margin-bottom: 20px; /* Add some spacing */
+        }
+
+        form {
+            max-width: 800px;
+            margin: 0 auto;
+            margin-bottom: 60px;
+            background-color: #fff; /* Set form background color */
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow */
+            text-align:justify;
+        }
+
+        button[type="submit"] {
+            background-color: #007bff; /* Set button background color */
+            color: #fff; /* Set button text color */
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #0056b3; /* Change button background color on hover */
+        }
+    </style>
+    
+    <a href="{% url 'bug_report' %}"><strong>Report a Bug</strong></a>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Submit Bug Report</button>
     </form>
 </body>
-</html>
+
+{% endblock content %}
