--- a/myecommerce/templates/ecommerce/main.html
+++ b/myecommerce/templates/ecommerce/main.html
@@ -79,9 +79,9 @@
       </div>
           <div class="profile-name">Hello {{user.username}}</div>
           <div class="logout-profile-dropdown">
-              <button class="profile-button"><img src="{% static 'images/abc.jpg' %}" class="profile"></button>
+              <button class="profile-button"><img src="{% static 'images/profile.png' %}" class="profile"></button>
               <div class="dropdown-content">
-                  <a href="#">Profile</a>
+                  <a href="">Profile</a>
                   <a href="{% url 'logout' %}">Logout</a>
               </div>
           </div>
@@ -120,16 +120,17 @@
               <span>Offers</span>
               <span>Contact Us</span>
               <span><a href="{% url 'bug_report' %}">Report a Bug</a></span>
+              <span><a href="{% url 'feedback' %}">Customer Feedback</a></span>
             </div>
                 
             <div class="reachout">
               <h2>Contact us</h2>
               <a href="mailto:abdulssekyanzi@gmail.com" class="email-link">Email Us</a>
-              <span><i class="fa fa-facebook-f"></i><small><a href="#top">@Eduuka</a></small></span>
-              <span><i class="fa fa-twitter"></i> <small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@eduuka012</a></small></span>
-              <span><i class="fa fa-instagram"></i><small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@_eduuka01</a></small></span>
-              <span><i class="fa fa-pinterest-p"></i><small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@Eduuka012</a></small></span>
-              <span><i class="fa fa-youtube"></i><small></small><a href="mailto:abdulssekyanzi@gmail.com" class="email-link">@Eduuka</a></span>
+              <span><i class="fa fa-facebook-f"></i><small><a href="https://www.facebook.com/">@Eduuka</a></small></span>
+              <span><i class="fa fa-twitter"></i> <small><a href="https://www.twitter.com/" class="email-link">@eduuka012</a></small></span>
+              <span><i class="fa fa-instagram"></i><small><a href="https://www.instagram.com/" class="email-link">@_eduuka01</a></small></span>
+              <span><i class="fa fa-pinterest-p"></i><small><a href="https://www.pinterest.com/" class="email-link">@Eduuka012</a></small></span>
+              <span><i class="fa fa-youtube"></i><small></small><a href="https://www.youtube.com/" class="email-link">@Eduuka</a></span>
             </div>
         </footer>
         <div class="copyright">
