--- a/static/css/main.css
+++ b/static/css/main.css
@@ -52,8 +52,8 @@ h1,h2,h3,h4,h5,h6{
 	margin-top: 10px;
 }
 
-.btn{
-	border-radius: 0;
+.shopnow{
+	border-radius: 5px;
 	border-color: #6ade2c;
 }
 
@@ -107,8 +107,8 @@ h1,h2,h3,h4,h5,h6{
   
 .profile {
   border-radius: 50px;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 40px;
   margin: 0px 5px 0px 0px;
 
   padding: 0px;
@@ -116,7 +116,7 @@ h1,h2,h3,h4,h5,h6{
 
 .profile-button {
   border-radius: 60px;
-  width: 55px;
+  width: 50px;
   margin-left: 10px;
 }
 
@@ -164,7 +164,8 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .container {
-    padding: 70px 0px 100px 20px;
+    padding: 150px 0px 10px 20px;
+    height: 800px;
 }
 
 .welcome {
@@ -182,41 +183,76 @@ h1,h2,h3,h4,h5,h6{
 	color: black
 }
 
-.slideshow-container {
-  position: relative;
-  max-width: 500px;
-  margin: 0;
-  padding: 0;
+@media (min-width: 991px) {
+  .slideshow-container {
+    position: relative;
+    max-width: 500px;
+    margin: 0;
+    margin-top: -250px;
+    margin-left: -100px;
+    padding: 0;
+  }
+  
+  .slide {
+    display: none;
+  }
+  
+  .slide img {
+    width: 800px;
+    height: 800px;
+    object-fit: contain;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .fade {
+    animation: fade 11s infinite;
+  }
+  
+  @keyframes fade {
+    0% {opacity: 0;}
+    25% {opacity: 1;}
+    75% {opacity: 1;}
+    100% {opacity: 0;}
+  }
 }
 
-.slide {
-  display: none;
+@media (max-width: 990px) {
+  .slideshow-container {
+    position: relative;
+    max-width: 500px;
+    margin: 0;
+    margin-top: -150px;
+    margin-left: -50px;
+    padding: 0;
+  }
+  
+  .slide {
+    display: none;
+  }
+  
+  .slide img {
+    width: 500px;
+    height: 500px;
+    object-fit: contain;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .fade {
+    animation: fade 2s infinite;
+  }
+  
+  @keyframes fade {
+    0% {opacity: 0;}
+    25% {opacity: 1;}
+    75% {opacity: 1;}
+    100% {opacity: 0;}
+  }
 }
 
-.slide img {
-  width: 100%;
-}
 
-.fade {
-  animation: fade 10s infinite;
-}
 
-@keyframes fade {
-  0% {opacity: 0;}
-  25% {opacity: 1;}
-  75% {opacity: 1;}
-  100% {opacity: 0;}
-}
-
-.text {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
 
 .gradient-custom-3 {
   color: black;
@@ -509,9 +545,63 @@ footer {
 }
 
 .copyright {
+  bottom: 0;
   background-color: #333;
   color: #fff;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 1px;
+}
+
+/* Cutomer Feedback */
+.form-box {
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.customer-feedback {
+  text-align: center;
+  margin-top: 20px;
+}
+
+form {
+  max-width: 400px;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+textarea {
+  resize: vertical;
+  height: 100px;
+}
+
+input[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
 }
